--- a/index.html
+++ b/index.html
@@ -1,1 +1,177 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nanyondo Carol | Portfolio</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f4f6f8;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background: #0a2540;
+            color: #fff;
+            padding: 60px 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin-bottom: 10px;
+        }
+        header p {
+            font-size: 18px;
+        }
+        section {
+            padding: 40px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+        h2 {
+            color: #0a2540;
+            margin-bottom: 15px;
+        }
+        .skills span {
+            display: inline-block;
+            background: #e0e7ff;
+            color: #0a2540;
+            padding: 8px 12px;
+            margin: 5px;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        .project, .job {
+            background: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        }
+        a {
+            color: #1d4ed8;
+            text-decoration: none;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #0a2540;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Nanyondo Carol</h1>
+    <p>Software Engineer | IT Assistant | Web Developer</p>
+    <p>Kampala, Uganda | 📧 caroltinah05@gmail.com</p>
+    <p>
+        <a href="https://github.com/CarolTinah" target="_blank">GitHub</a> |
+        <a href="https://www.linkedin.com/in/carol-nanyondo-85877630b" target="_blank">LinkedIn</a>
+    </p>
+</header>
+
+<section>
+    <h2>About Me</h2>
+    <p>
+        I am a highly motivated Software Engineering graduate from Makerere University,
+        currently working as an IT Assistant at Airserv Company Limited. I have hands-on
+        experience in IT support, networking, system setup, and website development using
+        WordPress and modern web technologies.
+    </p>
+</section>
+
+<section>
+    <h2>Skills</h2>
+    <div class="skills">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+        <span>React</span>
+        <span>MySQL</span>
+        <span>WordPress</span>
+        <span>UI/UX Design</span>
+        <span>Requirements Engineering</span>
+        <span>Networking</span>
+        <span>IT Support</span>
+    </div>
+</section>
+
+<section>
+    <h2>Work Experience</h2>
+
+    <div class="job">
+        <h3>IT Assistant – Airserv Company Limited</h3>
+        <p>
+            Set up office networks, configured routers and server rooms, provided IT
+            support and troubleshooting, and installed CCTV systems.
+        </p>
+    </div>
+
+    <div class="job">
+        <h3>IT Support Engineer – Uganda Telecommunications Corporation Limited</h3>
+        <p>
+            Provided technical support to staff, worked with ticketing systems,
+            and developed a customer feedback web page.
+        </p>
+    </div>
+
+    <div class="job">
+        <h3>Requirements Engineer – Makerere University</h3>
+        <p>
+            Gathered and documented system requirements, conducted interviews,
+            and assisted in test planning.
+        </p>
+    </div>
+</section>
+
+<section>
+    <h2>Projects</h2>
+
+    <div class="project">
+        <h3>Fireboxed E-commerce Website</h3>
+        <a href="https://fireboxed.com" target="_blank">Visit Website</a>
+        <p>E-commerce platform for phones, accessories, and repairs.</p>
+    </div>
+
+    <div class="project">
+        <h3>Tango-7 Car Wash Website</h3>
+        <a href="https://tango-7.ug" target="_blank">Visit Website</a>
+        <p>Car wash and automation website with online appointments.</p>
+    </div>
+
+    <div class="project">
+        <h3>KCEL Assignment & Grading System</h3>
+        <a href="https://github.com/CarolTinah/kcelsystem" target="_blank">View on GitHub</a>
+        <p>Web and command-line system for assignments and grading.</p>
+    </div>
+
+    <div class="project">
+        <h3>Meat Quality Inspection Mobile App</h3>
+        <p>Flutter mobile application using AI-based quality inspection.</p>
+    </div>
+</section>
+
+<section>
+    <h2>Education</h2>
+    <p>
+        <strong>Bachelor of Science in Software Engineering</strong><br>
+        Makerere University — CGPA: 4.3
+    </p>
+</section>
+
+<section>
+    <h2>Contact</h2>
+    <p>Email: caroltinah05@gmail.com</p>
+    <p>Phone: +256 784 275 636</p>
+</section>
+
+<footer>
+    <p>© 2025 Nanyondo Carol</p>
+</footer>
+
+</body>
+</html>
 
