--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
 <header>
-    <img src="https://placeimg.com/150/150/people" alt="Nanyondo Carol" class="profile-img">
+    <img src="https://github.com/CarolTinah/portfolio/blob/main/WhatsApp%20Image%202025-06-18%20at%2009.25.22_b1ff0c0b%20(Custom).jpg?raw=true" alt="Nanyondo Carol" class="profile-img">
     <h1>Nanyondo Carol</h1>
     <p>Software Engineer | IT Assistant | Web Developer</p>
     <p>Kampala, Uganda | 📧 caroltinah05@gmail.com</p>
